--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "mapbox.minimap",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "A plugin for Mapbox that provides a minimap in the corner of the map view.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "/dist"
   ],
+  "engines": {
+    "node": "^12.20.0 || >=14.0.0",
+    "yarn": ">=1.22.4 <2",
+    "npm": "Please use yarn instead of NPM to install dependencies"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/abdulk1/mapbox.minimap"
@@ -27,19 +32,19 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-typescript": "^6.0.0",
-    "@types/mapbox-gl": "^1.12.2",
-    "eslint": "^7.10.0",
-    "prettier": "^2.1.2",
-    "rollup": "^2.28.2",
-    "rollup-plugin-copy": "^3.3.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-typescript": "^8.2.1",
+    "@types/mapbox-gl": "^1.13.0",
+    "eslint": "^7.30.0",
+    "prettier": "^2.3.2",
+    "rollup": "^2.52.8",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.0.3"
+    "typescript": "^4.3.5"
   },
   "dependencies": {
-    "mapbox-gl": "^1.12.0",
-    "tslib": "^2.0.1"
+    "mapbox-gl": "^1.13.0",
+    "tslib": "^2.3.0"
   },
   "type": "module"
 }
